tests/ui/mismatched_types/issue-1448-2.stderr
error[E0308]: mismatched types
  --> $DIR/issue-1448-2.rs:6:24
   |
LL |     println!("{}", foo(10i32));
   |                    --- ^^^^^ expected `u32`, found `i32`
   |                    |
   |                    arguments to this function are incorrect
   |
note: function defined here
  --> $DIR/issue-1448-2.rs:3:4
   |
LL | fn foo(a: u32) -> u32 { a }
   |    ^^^ ------
help: change the type of the numeric literal from `i32` to `u32`
   |
LL -     println!("{}", foo(10i32));
LL +     println!("{}", foo(10u32));
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
